data/derived/sp14/progs/unify/prog3082.ml.out
Characters 70-88:
  else digitsOfInt (n/10) :: [n mod 10];;
       ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
